Finally metro.config.js is not ignored any more!!! YEAH!!!

--- a/app.json
+++ b/app.json
@@ -1,10 +1,7 @@
 {
   "name": "reactNativeTestapp",
   "displayName": "reactNativeTestapp",
-  "expo": {
-    "packagerOpts": {
-      "assetExts": [".xml", ".png", ".jpg", ".pb", ".tflite"],
-      "sourceExts": ["xml", "png", "jpg", "pb", "tflite"]
-    }
+  "packagerOpts": {
+    "config": "metro.config.js"
   }
 }
